# SentinelChain

./: .env.example  .gitattributes  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md
docs/adr/: 0000-template.md  0001-kafka-serialization-format.md  0002-flink-sql-vs-datastream.md  0006-event-envelope-and-schema-evolution.md  0007-idempotency-strategy.md  0009-cdc-current-state-design.md  README.md
docs/data-contracts/: events-deduplicated.md  events-normalized.md  ext-usgs-raw.md  ops-current-state.md  risk-impact-candidates.md
flink/: pom.xml
flink/common/: pom.xml
flink/jobs/event-deduplicator/: README.md  dependency-reduced-pom.xml  pom.xml
flink/jobs/event-geo-correlator/: README.md  dependency-reduced-pom.xml  pom.xml
flink/jobs/external-event-normalizer/: README.md  dependency-reduced-pom.xml  pom.xml
flink/sql/: operational_current_state.sql
infra/debezium/: postgres-source.json
infra/flink/: Dockerfile
infra/monitoring/: otel-collector-config.yaml  prometheus.yml
libs/common/: README.md  pyproject.toml
libs/common/src/sentinelchain_common/: __init__.py  avro.py  config.py  envelope.py  health.py  kafka.py  llm.py  logging.py  observability.py  resilience.py  time.py
libs/common/tests/: test_avro.py  test_envelope.py  test_llm.py  test_resilience.py
schemas/avro/: audit.data_quality.v1.avsc  events.deduplicated.v1.avsc  events.normalized.v1.avsc  ext.usgs.raw.v1.avsc  risk.impact_candidates.v1.avsc
scripts/: bootstrap.sh  create-topics.sh  register-connectors.sh  register-schemas.sh  run-demo-scenario.sh  seed-operational-data.sh  submit-flink-jar.sh  submit-flink-sql.sh
services/ingestion-usgs/: Dockerfile  README.md  pyproject.toml
services/ingestion-usgs/src/ingestion_usgs/: __init__.py  client.py  config.py  cursor.py  health.py  main.py  metrics.py  parser.py  poller.py  producer.py  quality.py
services/ingestion-usgs/tests/: test_cursor.py  test_parser.py  test_poller.py  test_quality.py
services/ingestion-usgs/tests/fixtures/: usgs_sample.json
services/supply-chain-simulator/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/supply-chain-simulator/migrations/: env.py
services/supply-chain-simulator/migrations/versions/: 0001_initial_schema.py
services/supply-chain-simulator/src/supply_chain_simulator/: __init__.py  config.py  db.py  health.py  main.py  models.py  seed.py  simulator.py
services/supply-chain-simulator/tests/: test_seed.py  test_simulator.py
tests/contract/: test_schema_compatibility.py
(+27 files in other folders)
